# script-launcher

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
src/script_launcher/: __init__.py  config.py  database.py  main.py  utils.py
src/script_launcher/api/: __init__.py  executions.py  logs.py  scripts.py
src/script_launcher/models/: __init__.py  script.py
src/script_launcher/schemas/: __init__.py  script.py
src/script_launcher/services/: __init__.py  executor.py  log_manager.py  scheduler.py
src/script_launcher/websocket/: __init__.py  logs.py
static/: index.html
static/css/: styles.css
static/js/: app.js
tests/: __init__.py  conftest.py  test_main.py
tests/test_api/: test_executions.py  test_scripts.py
tests/test_services/: test_executor.py  test_log_manager.py  test_scheduler.py
